--- a/chi2012.tex
+++ b/chi2012.tex
@@ -142,7 +142,11 @@ capabilities that effective management of data heterogeneity can provide for use
 The mash-up
 
 %the following needs integrating with the rest of the lit rev.
-The Semantic Web community use ontologies to formally describe vocabularies for specific domains by defining axioms describing entities, instances of entities and the relationships that hold among them \cite{borst1997construction}. The axioms in an ontology can be either assertional or terminological, the former describes the schema of the entities and the latter the instances of those entities. Typically, these ontologies are marked up using OWL (Web Ontology Language) and Resource Description Framework Schema (RDF(S)).  There has been an explosion of ontologies published online, many of which describe the same entities.  These entities may or may not share the same entity names or properties.  Therefore using data from heterogeneous ontologies can be difficult. The field of ontology matching can be split into two fields: schema and instance matching.  Instance matching differs from schema level matching, because it aims to detect instances referring to the same real world object, while schema matching aims to find a set of mappings between concepts and properties in different ontologies.For our purposes of allowing users to explore and compare data from different websites, we are particularly interested in aligning instances of the most common forms of data that people compare from website to website.  Instance matching within this scope is in its infancy, some of its problems have been addressed by the record linkage problem in the database field \cite{fellegi1969theory,winkler1999state,gu2003record}.  However, there are new problems to address in this field, which are strongly related to schema matching, including structural heterogeneity and logical heterogeneity.The approaches used to match instances typically use: natural language processing, using lexicons like Wordnet to identify synonyms, and word stems \cite{euzenat2004api}; machine learning techniques \cite{doan2003learning}; probabilistic approaches \cite{suchanek2011paris} and comparisons of instances’ schema’s structural and logical definitions \cite{castano2006matching}.  In our case, this is problematic because information from the web does not always have a schema.  In real-world scenarios, semi-automatic ontology matching approaches are favoured over automatic because reconciling the differences between ontologies that were designed for different purposes is not always accurate.  Semi-automatic approaches use varying levels of support to aid a user, from prompting users to manually check flagged alignments, to suggesting possible alignments.  Allowing users to compare instances across heterogeneous data is powerful because users can combine and evaluate multiple sources.  In principle, automatic instance matching approaches would allow users to seamlessly browse this data, however for now and the foreseeable future such approaches cannot make use of personal knowledge and do not guarantee their alignments.  Therefore in our work, we adopt a semi-automated matching approach, which will support the user to make alignments between web data and their personal data.
+The Semantic Web community use ontologies to formally describe vocabularies for specific domains by defining axioms describing entities, instances of entities and the relationships that hold among them \cite{borst1997construction}. The axioms in an ontology can be either assertional or terminological, the former describes the schema of the entities and the latter the instances of those entities. Typically, these ontologies are marked up using OWL (Web Ontology Language) and Resource Description Framework Schema (RDF(S)).  There has been an explosion of ontologies published online, many of which describe the same entities.  These entities may or may not share the same entity names or properties.  Therefore using data from heterogeneous ontologies can be difficult. The field of ontology matching can be split into two fields: schema and instance matching.  Instance matching differs from schema level matching, because it aims to detect instances referring to the same real world object, while schema matching aims to find a set of mappings between concepts and properties in different ontologies.
+
+For our purposes of allowing users to explore and compare data from different websites, we are particularly interested in aligning instances of the most common forms of data that people compare from website to website.  Instance matching within this scope is in its infancy, some of its problems have been addressed by the record linkage problem in the database field \cite{fellegi1969theory,winkler1999state,gu2003record}.  However, there are new problems to address in this field, which are strongly related to schema matching, including structural heterogeneity and logical heterogeneity.
+
+The approaches used to match instances typically use: natural language processing, using lexicons like Wordnet to identify synonyms, and word stems \cite{euzenat2004api}; machine learning techniques \cite{doan2003learning}; probabilistic approaches \cite{suchanek2011paris} and comparisons of instances’ schema’s structural and logical definitions \cite{castano2006matching}.  In our case, this is problematic because information from the web does not always have a schema.  In real-world scenarios, semi-automatic ontology matching approaches are favoured over automatic because reconciling the differences between ontologies that were designed for different purposes is not always accurate.  Semi-automatic approaches use varying levels of support to aid a user, from prompting users to manually check flagged alignments, to suggesting possible alignments.  Allowing users to compare instances across heterogeneous data is powerful because users can combine and evaluate multiple sources.  In principle, automatic instance matching approaches would allow users to seamlessly browse this data, however for now and the foreseeable future such approaches cannot make use of personal knowledge and do not guarantee their alignments.  Therefore in our work, we adopt a semi-automated matching approach, which will support the user to make alignments between web data and their personal data.
 
 \section{Pre-study 1 - Understanding Heterogeneity for Everyday Tasks}
 \subsection{Method}
@@ -187,7 +191,12 @@ Design process
 
 \section{Methodology}
 
-\subsection{Participants}We recruited 20 participants (10 female) from the University of Southampton’s international student mailing list.  All of the participants spoke English, and for 12 of them, English was not their first language, however they had all passed the university English proficiency test.  Predominately the participants were studying various levels of Computer Science, and 5 of which studied other subjects.  All of the participants had previously encountered tasks requiring them to use and evaluate data from multiple websites.\subsection{Task Design}We designed a semi-structured lab-based study around four possible tasks shown in Table \ref{tab:studyfactors}.  The tasks were to select a restaurant for an event or university at which to study, out of six possible choices. We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choices. The shortlist of universities and restaurants were taken from the top six ranked from the Complete University Guide (for task 1 and 2), Tripadvisor (for task 3) and Yelp (for task 4).  The top six were chosen from these websites because they provide a realistic shortlist and are comparable in terms of rankings and properties. The web sites used as data sources were chosen because they are the most popular and contain comparable statistics for universities and restaurants.
+\subsection{Participants}
+We recruited 20 participants (10 female) from the University of Southampton’s international student mailing list.  All of the participants spoke English, and for 12 of them, English was not their first language, however they had all passed the university English proficiency test.  Predominately the participants were studying various levels of Computer Science, and 5 of which studied other subjects.  All of the participants had previously encountered tasks requiring them to use and evaluate data from multiple websites.
+
+\subsection{Task Design}
+We designed a semi-structured lab-based study around four possible tasks shown in Table \ref{tab:studyfactors}.  The tasks were to select a restaurant for an event or university at which to study, out of six possible choices. We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choices. The shortlist of universities and restaurants were taken from the top six ranked from the Complete University Guide (for task 1 and 2), Tripadvisor (for task 3) and Yelp (for task 4).  The top six were chosen from these websites because they provide a realistic shortlist and are comparable in terms of rankings and properties. The web sites used as data sources were chosen because they are the most popular and contain comparable statistics for universities and restaurants.
+
 \begin{table*}[t]
 \caption{Tasks, choices and data sources}
 \begin{center}
@@ -207,7 +216,20 @@ Task	 &Choices	&Data Sources\\
 \end{tabular}
 \end{center}
 \label{tab:studyfactors}
-\end{table*}%Each task had an A and B condition.  The A condition, the participant could only use WebBox to make their decision; and in the B condition the participant was given the choice to using any websites they desired and or spreadsheets in Microsoft Excel containing the data taken from the data sources to make their choice.  Each study consisted of two tasks, one A and one B condition.  Each participant was given 10 minutes to complete a task.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute WebBox tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.\subsection{Data Collection}Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study’s protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant’s actions on screen. We asked the participants to speak out loud their thought process and what they were looking at, so that we could evaluate their reasoning behind their processes.The studies lasted 40 minutes, on average.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn’t influence the study.  The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies’ data and to revisit protocols, if necessary.\subsection{Data Analysis}During the data collection we collated a spreadsheet summarising the participant’s gender, typical daily computer usage, the tasks allocated and basic actions performed during the task.  After we had collected the study’s data, we performed our data analysis. 
+\end{table*}%
+
+Each task had an A and B condition.  The A condition, the participant could only use WebBox to make their decision; and in the B condition the participant was given the choice to using any websites they desired and or spreadsheets in Microsoft Excel containing the data taken from the data sources to make their choice.  
+
+Each study consisted of two tasks, one A and one B condition.  Each participant was given 10 minutes to complete a task.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute WebBox tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
+
+\subsection{Data Collection}
+Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study’s protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant’s actions on screen. We asked the participants to speak out loud their thought process and what they were looking at, so that we could evaluate their reasoning behind their processes.
+
+The studies lasted 40 minutes, on average.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn’t influence the study.  The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies’ data and to revisit protocols, if necessary.
+
+\subsection{Data Analysis}
+
+During the data collection we collated a spreadsheet summarising the participant’s gender, typical daily computer usage, the tasks allocated and basic actions performed during the task.  After we had collected the study’s data, we performed our data analysis. 
 
 TODO look further into types of data analysis....
 
@@ -222,19 +244,90 @@ Interaction-method specific hypotheses
 Are these interaction methods sufficient to perform common tasks involving heterogeneous data sources?  Does supporting these simple techniques facilitate task completion?
 
 \section{Results}
-How many native english speakers, only 8 were all enrolled at university all past proficiency test.
+
+
+% behaviours in websites
+
+Users who opted to use websites to make their decisions repeatedly encountered a number of difficulties and issues. In
+particular, there was significant confusion over the meaning of data points, for example the percentage-based rankings of
+university teaching by the Times Higher Education. There were numerous usability issues in using websites, particularly
+in searching for university courses and course requirements. Similarly, participants found it difficult to understand the
+locations of restaurants in cities that they were not familiar, and could not find a way to plot the shortlist of restaurants onto
+the same map using the websites. Overall, the users that spent the most time using websites exhibited significant
+frustration attempting to locate and compare different criteria (such as course entry requirements, or restaurant locations),
+and all ended up falling back to using the supplied spreadsheets.
+
+% behaviours in excel
+One of the designs of the study was to produce a spreadsheet worksheet for each website, which meant that users
+had to switch between the worksheets to gather data from multiple sources. Different approaches to using the spreadsheets
+were observed. Some users were keen to collate all data onto a single sheet, so that they could compare the values
+all at once. However, this approach was error prone, for example participants noticing too late that the ordering of rows
+was different on each sheet, so that their pasted values were incorrectly mapped. Others used pen and paper to collate
+the values, which was often faster and resulted in less observed frustration. While the majority of users did not
+attempt anything complex with Excel (in fact only one users used charts), there was some advanced use of Excel observed.
+One user explained that they did not like to look at numbers, and so coloured the cells of the types of restaurant, and the
+friends' preferences, and matched the colours to make their decision. Another user calculated their own weighted metric
+of which university to choose by averaging different metrics supplied by the data sources.
+
+% webbox client
+
+The most commonly observed use of WebBox was to collate the data on-screen, and compare multiple values directly.
+About half of the observed users actually used the instance combination feature of WebBox, with the other half able
+to successfully make decisions without using it. Those who tried to use it were largely successful, and were able
+to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened
+up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result
+of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
+
+%% more from doc here
+
+% weird and wonderful
+A number of users admittedly introduced their own bias into the choices: "I prefer Indian food, so I will choose the Indian
+restaurant", and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating
+those that required bus transfers (the protocol did not mention routing/transfers at all).
+
+
+
+
 \section{Discussion}
-What we found 
 
-What we didn’t find (evidence for)
+% processes
 
-What we might look at next -- follow-on work
-		We focused on terminological heterogeneity -- didn’t address structural heterogeneity, semantic heterogeneity
-		We focused on finite (small) sets Streaming data (how do select future data --) 
-		Scale - small data, what are the facilites required for large data
-		Collaborative - how might interaction support multiple users collaborating?
+In order to complete the tasks, the users followed a number of different processes. The most common process followed
+was {\it collation} of data, either on-screen or on paper. Some users were proficient enough to copy and paste data
+in the supplied spreadsheets from worksheet to worksheet, while others manually typed data value-by-value across worksheets.
+Others preferred to collate the data from screen to paper, in order to compare multiple data points. A similar process that
+some participants followed was to determine which values of a particular statistic were acceptable, and keep a paper tally
+of these next to the set of choices. They then made their choice based on the value of this tally.
 
-Limitations found from study... what is the take away from the limitations
+Two contrasting approaches that participants followed was to use the data to rule out candidates, or to use the data to
+directly compare candidates at once. Our pool of participants exhibited both behaviours evenly, however in the condition
+when using the WebBox interface, significantly more comparison (and visualisation of values) was performed, with fewer
+participants using the "ruling out" process. A consequence of this was that when asked to justify their choices, users were
+able to verify their values on-screen immediately, whereas those who had ruled-out had to memorise their reasons, with
+mixed success  -- many participants had to look through the data sources to re-find the reasons why they has ruled out some choices.
+Therefore, the uses that were using WebBox were more confident in their choices, and knew exactly why they had chosen them,
+often pointing to the screens to show and verify each choice as they explained them.
+
+%What we found 
+%
+%What we didn’t find (evidence for)
+%
+%What we might look at next -- follow-on work
+%		We focused on terminological heterogeneity -- didn’t address structural heterogeneity, semantic heterogeneity
+%		We focused on finite (small) sets Streaming data (how do select future data --) 
+%		Scale - small data, what are the facilites required for large data
+%		Collaborative - how might interaction support multiple users collaborating?
+%
+%Limitations found from study... what is the take away from the limitations
+
+
+
+
+
+
+
+
+
 \section{Conclusion} %Key findings of the whole paper and its implications
 
 
