--- a/chi2012.tex
+++ b/chi2012.tex
@@ -460,11 +460,11 @@ We found that the use of DP strongly influenced people to keep all candidates ar
 
 To determine whether participants used the data integration features of DP, we looked at use of the \emph{multipath selection} and \emph{Same-As} features of the system.   Pertaining to path selection, all participants readily used the path selection process to select values.   Five participants (25\%) deliberately used multipath selection, defined as selecting more than one active path per group at the same time to display common values across heterogeneous items. (We did not count accidental use of multipath, such as happened a few times when a participant had an already active path and wanted to switch to a separate path accidentally).
 
-Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixteen (80\%) used \emph{Same-As} as least once; among these participants, they used \emph{Same-As} an average of 4.6 times per trial. We counted a single ``use'' as a single drag-and-drop of an individual item, or an entiredrag-and-drop of an entire group into another group.  (We did not differentiate enumerated value consolidation from entity consolidation, as these operations were not discernably different from the interface perspective.)
+Participants used the drag-and-drop \emph{Same-As} capability extensively. Sixteen (80\%) used \emph{Same-As} as least once; among these participants, they used \emph{Same-As} an average of 4.6 times per trial. We counted a single ``use'' as a single drag-and-drop of an individual item, or a drag-and-drop operation of an entire group onto another.  (We did not differentiate enumerated value consolidation from entity consolidation, as these operations were not discernably different from the interface perspective.)
 
 \subsection{Use of Visualisation Features}
 
-To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while 15 (75\%) used the map.  Determining the impact these had on performance, we discovered a significant interaction between the amount charting was used ($F(1,17)=3.26; p<0.10$) and maps were used ($F(1,17)=4.32; p<0.10$)  with time to complete the task.  Examining the coefficients of our ANOVA regression ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) we find that as charting weakly positively influences time taken, while maps negatively influences it.
+To determine to what extent visualisation tools were used in condition A, 13 (65\%) used charting tools at least once, while 15 (75\%) used the map.  Determining the impact these had on performance, we performed a multiple regression on time taken with the number of uses of charting and mapping as variables.   We found significant effects of both charting and mapping variables on time taken, ($R^2_{adj} = 0.04; F(2,17)=3.79; p<0.05$), with coefficients ($Y_0=8.91;\beta_{charts}=0.49;\beta_{maps}=-1.05$) demonstrating that charting positively influenced time taken, while the use of maps led to shorter times.
 
 \subsection{Condition A (DataPalette)}
 In the A condition, where participants used DataPalette to complete their tasks, they used it to collate the data on-screen, and compare multiple values directly. About half of the observed users actually used the instance combination feature of DataPalette, with the other half able to successfully make decisions without using it. Those who tried to use it were largely successful, and were able to therefore use the global brush-highlighting to simultaneously compare different statistics. Most users instantly opened up all data sources into individual boxes, in order to determine which sources contained specific statistics. The result of this technique is that the users instantly filled their screen, and ran out of space for plots and maps.
